--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scisors</title>
-    <script src="game.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script async src="game.js"></script>
 </head>
 <body>
-    
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <h2>What have been selected?</h2>
+    <p id="selected">Choose one of the above :D</p>
+    <h2>Who won previous round?</h2>
+    <p id="round">Lets play!</p>
+    <h2>What is the final score?</h2>
+    <p id="result"></p>
+    <p>Player points: <span id="pp">0</span> : <span id="cp">0</span> Computer points</p>
+
+    add info about win match after 5point
 </body>
 </html>
