added UI and description, bonus: button to refresh page and play again

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <script async src="game.js"></script>
 </head>
 <body>
-    <button id="rock">Rock</button>
+    <div class="container">
+    <div class="buttons"><button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
-    <h2>What have been selected?</h2>
-    <p id="selected">Choose one of the above :D</p>
+    </div>
+    <div class="jsText"><h2>What have been selected?</h2>
+    <p id="selected">To start choose one of the above :D</p>
     <h2>Who won previous round?</h2>
     <p id="round">Lets play!</p>
     <h2>What is the final score?</h2>
     <p id="result"></p>
     <p>Player points: <span id="pp">0</span> : <span id="cp">0</span> Computer points</p>
-
-    add info about win match after 5point
+<div id="final"></div>
+<button id="playAgain">Play Again!</button> </div></div>
 </body>
 </html>
